<resources>
    <string name="app_name">FirebaseAuthentication</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="nav_drawer_title">Navigation Drawer Title</string>
    <string name="nav_drawer_subtitle">Navigation Drawer Subtitle</string>
    <string name="home">Home</string>
    <string name="list_of_books">List of Books</string>
    <string name="add_book">Add Book</string>
    <string name="penn_state_logo">Penn State Logo</string>
    <string name="frag_home_welcome">Welcome - Home</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="publication_date">Publication Date</string>
    <string name="isbn">ISBN:</string>
    <string name="login_email">Email:</string>
    <string name="user_email">Email:</string>
    <string name="welcome_to_penn_state">Welcome to Penn State</string>
    <string name="menu_home">Home</string>
    <string name="menu_list_books">List of Books</string>
    <string name="menu_log_out">Log Out</string>
    <string name="nav_header_desc">Penn State Logo</string>
    <string name="nav_header_title">Penn State</string>
    <string name="nav_header_subtitle">sec6018@psu.edu</string>
    <string name="action_settings">Settings</string>
    <string name="frag_books_list_welcome">Welcome - List Books</string>
    <string name="book_image">Book Image</string>
    <string name="title">Title</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_firebase_authentication">Firebase Authentication</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="click_to_register_link">Click to Register</string>
    <string name="click_to_login_link">Click to Login</string>
    <string name="identifier">Identifier</string>
    <string name="sign_in_date">Sign In Date</string>
    <string name="sign_in_time">Sign In Time</string>
    <string name="menu_add_books">Add Books</string>
    <string name="menu_add_book">Add Book</string>
    <string name="frag_add_book_header">Add Book</string>
    <string name="frag_text_view_title">Title</string>
    <string name="frag_text_view_author">Author</string>
    <string name="frag_text_view_publisher">Publisher</string>
    <string name="frag_text_view_publication_date">Publication Date</string>
    <string name="frag_text_view_isbn">ISBN</string>
    <string name="frag_button_add_book">Add Book</string>
    <string name="button_text_add_book">Add</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="enter_publication_date">Enter Publication Date</string>
    <string name="enter_publisher">Enter Publisher</string>
    <string name="enter_author">Enter Author</string>
    <string name="enter_title">Enter Title</string>
    <string name="text_title">Title:</string>
    <string name="text_author">Author:</string>
    <string name="text_publisher">Publisher:</string>
    <string name="text_publication">Publication:</string>
    <string name="text_isbn">ISBN:</string>
    <string name="_8942">⋮</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="delete_book">Delete Book</string>
    <string name="button_text_delete_book">Delete</string>
    <string name="email_address">Email</string>
    <string name="books">Books</string>
</resources>