<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="fill_horizontal"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/store_book_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_penn_state_foreground" />

    <TextView
        android:id="@+id/add_book_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="25dp"
        android:text="@string/frag_add_book_header"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_title"
        android:text="@string/frag_text_view_title"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/add_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_title"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_author"
        android:text="@string/frag_text_view_author"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/add_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_author"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_publisher"
        android:text="@string/frag_text_view_publisher"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/add_book_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_publisher"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_publication"
        android:text="@string/frag_text_view_publication_date"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/add_book_publication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_publication_date"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_isbn"
        android:text="@string/frag_text_view_isbn"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/add_book_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_isbn"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_add_book"
            android:text="@string/button_text_add_book"
            android:layout_marginEnd="10dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_delete_book"
            android:text="@string/button_text_delete_book"
            android:layout_marginEnd="10dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>