<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list_books"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_list_books" />
        <item
            android:id="@+id/nav_add_book"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_add_book" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/menu_log_out" />
    </group>
</menu>