<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_home_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/penn_state_logo"
        android:paddingTop="0dp"
        android:paddingBottom="15dp"
        app:srcCompat="@drawable/ic_splashscreen_foreground" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_home_welcome"
        android:textColor="#1E407C"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/identifier_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/identifier"
        android:textAlignment="center"
        android:textColor="#1E407C"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sign_in_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_date"
        android:textAlignment="center"
        android:textColor="#1E407C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sign_in_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_time"
        android:textAlignment="center"
        android:textColor="#1E407C"
        android:textSize="18sp" />

</LinearLayout>