<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/image_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/penn_state_logo"
        android:padding="15dp"
        app:srcCompat="@drawable/ic_penn_state_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/Login"
        android:textColor="#1D417D"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:textColor="#1D417D"
            android:textColorHint="#1D417D"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:textColor="#1D417D"
            android:textColorHint="#1D417D"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/click_to_register_link"
        android:textColor="#1D417D"
        android:textSize="20sp"
        android:textStyle="bold" />

    </LinearLayout>